  opendir(), utime(), unlink(), chown(), link(), readlink(),
  realpath(), chdir(), access(), stat(), rmdir(), lstat(),
  chmod(), statfs() and open()/fopen().

- Fixed several issues with the formatted output of strftime()
  for the "C" locale: "%p" could return " PM", "%c" is now
  equivalent to "%a %b %e %T %Y", "%x" is equivalent to "%m/%d/%y"
  and "%X" is now equivalent to "%T".


c.lib 1.194 (15.7.2005)

- Added getopt_long to libunix.a <tfrieden>

- Added new libprofile.a which implements gprof gmon.out output <tfrieden>

- Added the function profil() to libc.a <tfrieden>

- Added ftello() and fseeko() which both merely call the equivalent (at
  least for clib2) ftell() and fseek() functions, respectively.

- statfs() never stated that a disk was mounted for read-only access
  because the wrong InfoData structure member was tested. Fixed.

- lstat would overwrite the name parameter via ReadLink(..., name, ...)
  instead of ReadLink(..., new_name, ...) <tfrieden>

- Implemented exp2()/exp2f() and log2()/log2f() as suggested by
  Henning Nielsen Lund. Thank you very much!

- The pattern matching code which expands command line arguments, as part
  of libunix.a, now translates the "*" wildcard into "#?" unless you prefix
  it with a backtick ("'"), which is the wildcard pattern escape character
  used on AmigaOS.

- Repaired the pattern matching code which expands command line arguments:
  it no longer requires that any parameters are quoted and it is automatically
  enabled if you link against libunix.a, without libc.a standing a chance to
  accidentally override it.

- Fixed a bug in vfprintf that would surface when the buffer was enlarged
  if the pattern was too large to fit the static internal buffer <tfrieden>

- Added file system names to statfs <tfrieden>

- Moved all the constructor code out of "stdlib_init_exit.c" and into the
  files which initialize global data, such as the new "stdlib_program_name.c"
  and "stdlib_malloc.c".
